# VikTek2d

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_VikTek.sh
cmake/: Vik_WrapConfig.cmake  vik_wrap-config.cmake
include/: Scene.h
include/graphic/: Camera  GraphicObject.h  Scene.h  Sprite.h  Text.h
include/lvik/: vikString.h
include/messageBox/: Message.h
include/physic/: CircleObject.h  Object.h  Space.h  TileObject.h
src/: Scene.cpp  main.cpp
src/graphic/: Camera.cpp  GraphicObject.cpp  Scene.cpp  Sprite.cpp  Text.cpp
src/lvik/: vikString.cpp
src/messageBox/: Message.cpp
src/physic/: CircleObject.cpp  Object.cpp  TileObject.cpp
